--- a/lab/Bai_9_Toan_B1704780/app/src/main/res/layout/activity_main.xml
+++ b/lab/Bai_9_Toan_B1704780/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,70 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="bottom"
+        android:orientation="vertical"
+        android:background="#bbbbff">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Truy vấn content provider"
+            android:gravity="center_vertical|center_horizontal"
+            android:textAllCaps="true"
+            android:textColor="#1E1EFF"
+            android:background="#bbbbff"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Xem tất cả liên lạc"
+            android:textAllCaps="true"
+            android:textColor="#1E1EFF"
+            android:textSize="15sp"
+            app:backgroundTint="#03AFFF"
+            android:onClick="displayAllContact" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Xem lịch sử cuộc gọi"
+            android:textAllCaps="true"
+            android:textColor="#1E1EFF"
+            android:textSize="15sp"
+            app:backgroundTint="#03AFFF"
+            android:onClick="displayAllCallLog" />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5sp"
+            android:layout_marginBottom="5sp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"
+            android:text="Xem danh sách media"
+            android:textAllCaps="true"
+            android:textColor="#1E1EFF"
+            android:textSize="15sp"
+            app:backgroundTint="#03AFFF"
+            android:onClick="mediaContent" />
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            app:srcCompat="@drawable/tren_song" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
